@@ -1,11 +1,12 @@
 Current:
   * Chinese translation updates from liulitchi
+  * Turkish translation updates from TufanSirin.
   * Better detection of the gnuplot location
   * Better detection of the Right Place to open autocomplete popups in
   * Better formatting of special unicode operators
+  * If autosave on closing fails: Allow the user to ask to exit anyway.
+  * Enable Autosave even if the option to keep the file saved is disabled.
   * Corrected parametric plots in the plot wizard
-  * Chinese translation updates from liulitchi.
-  * Turkish translation updates from TufanSirin.
 
 19.10.0:
   * Corrected a Regression: The better display of exponents failed for exp(x^2).
